# banner-scanner

./: .gitignore  pyproject.toml
src/: banner_scanner.py
